# handler/response.go
@@ -3,8 +3,19 @@ package handler
 import (
 	"fmt"
 
+	"github.com/VitorSantosCruz/gopportunities/schemas"
 	"github.com/gin-gonic/gin"
 )
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode "`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
 
 func sendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-Type", "application/json")
